--- a/index.html
+++ b/index.html
@@ -3,12 +3,55 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <link rel="shortcut icon" href="smol logo.png" type="image/png" />
+
+    <link rel="stylesheet" id="theme" href="light.css" />
+    <link rel="preload" href="dark.css" as="style" />
+
     <title>Toby Cm</title>
   </head>
+
   <body>
+    <script>
+      /**
+       * Sets the theme of the page. If no theme is provided, it will toggle between light and dark.
+       *
+       * @param {string | undefined} theme The theme to set.
+       *
+       * @returns {void}
+       */
+      function setTheme(theme) {
+        /** @type {HTMLLinkElement} */
+        const css = document.getElementById("theme");
+
+        if (!theme) theme = css.href.endsWith("light.css") ? "dark.css" : "light.css";
+
+        css.href = theme;
+
+        localStorage.setItem("theme", theme);
+
+        document.getElementById("themeButton").textContent = theme === "light.css" ? "🔆" : "🌙";
+      }
+    </script>
+
+    <div style="float: right">
+      <button onclick="setTheme()" id="themeButton">🔆</button>
+    </div>
+
+    <script>
+      let theme = localStorage.getItem("theme");
+
+      const prefersDarkScheme = window.matchMedia("(prefers-color-scheme: dark)");
+
+      if (!theme && prefersDarkScheme.matches) theme = "dark.css";
+
+      setTheme(theme);
+    </script>
+
     <h1>Hey! I'm Toby Cm</h1>
 
-    <h2>I'm currently a high school student, and I like everything computer-related</h3>
+    <h2>I'm currently a high school student, and I like everything computer-related</h2>
 
     <h3>Some of my coding works:</h3>
     <ul>
@@ -28,10 +71,18 @@
     </ul>
 
     <h3>Me tinkering with some hardwware:</h3>
-    <a href="https://www.reddit.com/r/homelab/comments/13krl7t/0_dollar_home_lab_in_basement/">https://www.reddit.com/r/homelab/comments/13krl7t/0_dollar_home_lab_in_basement/</a>
+    <a href="https://www.reddit.com/r/homelab/comments/13krl7t/0_dollar_home_lab_in_basement/"
+      >https://www.reddit.com/r/homelab/comments/13krl7t/0_dollar_home_lab_in_basement/</a
+    >
 
-    <h3>There are more links on my <a href="https://github.com/tobycm">GitHub profile</a></h3>
+    <h3>
+      There are more links on my
+      <a href="https://github.com/tobycm">GitHub profile</a>
+    </h3>
 
-    <h3>Feel free to contact me at <a href="mailto:toby@vsus.app">toby@vsus.app</a></h3>
+    <h3>
+      Feel free to contact me at
+      <a href="mailto:toby@vsus.app">toby@vsus.app</a>
+    </h3>
   </body>
 </html>
