fix: typo reported by 5 people total

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
       </li>
     </ul>
 
-    <h3>Me tinkering with some hardwware:</h3>
+    <h3>Me tinkering with some hardware:</h3>
     <a href="https://www.reddit.com/r/homelab/comments/13krl7t/0_dollar_home_lab_in_basement/"
       >https://www.reddit.com/r/homelab/comments/13krl7t/0_dollar_home_lab_in_basement/</a
     >
