new school year new me XDD

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 
     <link rel="shortcut icon" href="smol logo.png" type="image/png" />
 
+    <link rel="stylesheet" href="index.css" />
+
     <link rel="stylesheet" id="theme" href="light.css" />
     <link rel="preload" href="dark.css" as="style" />
 
@@ -49,31 +51,64 @@
       setTheme(theme);
     </script>
 
-    <h1>Hey! I'm Toby Cm</h1>
+    <div style="display: flex; align-items: center; flex-direction: row">
+      <h1>Hey! I'm Toby Cm</h1>
+      <img src="smol logo.png" alt="toby cm's logo" style="height: 2.125rem; margin-left: 0.5rem" />
+    </div>
 
-    <h2>I'm currently a high school student, and I like everything computer-related</h2>
+    <h2>=> Currently a high school student</h2>
+    <h2>=> Top 127th on <a href="https://www.codingame.com/multiplayer/clashofcode/leaderboard">CodinGame Clash of Code</a></h2>
 
-    <h3>Some of my coding works:</h3>
+    <h3>Application programming projects:</h3>
     <ul>
       <li>
-        <a href="https://github.com/tobycm/random-issue-picker">A random GitHub issue picker for a repo</a>
+        <a href="https://github.com/tobycm/l">Easy to use short link manager</a> - Try it out at
+        <a href="https://shorl.tobycm.dev">shorl.tobycm.dev</a>
+      </li>
+      <li>
+        <a href="https://github.com/tobycm/qr-code-generator-web">Quick and easy QR Code Generator</a> - Try it out at
+        <a href="https://qr.tobycm.dev">qr.tobycm.dev</a>
+      </li>
+      <li>
+        <a href="https://github.com/tobycm/random-issue-picker">A random GitHub issue picker for a repo</a> - Try it out at
+        <a href="https://rip.tobycm.dev">rip.tobycm.dev</a>
+      </li>
+      <li>
+        <a href="https://github.com/tobycm/pocketbase-blog">Simple blog with PocketBase as backend</a> - Online at
+        <a href="https://blog.tobycm.dev">blog.tobycm.dev</a>
       </li>
       <li>
         <a href="https://github.com/tobycm/akatsuki-du-ca-bot-remastered">A Discord bot written in Python</a>
       </li>
       <li>
         <a href="https://github.com/tobycm/emochoice">The web store of Emochoice, made in collaboration with </a>
-        <a href="https://github.com/pdt1806">@pdt1806</a>
+        <a href="https://github.com/pdt1806">@pdt1806</a> - Online at <a href="https://emochoice.ca">emochoice.ca</a>
       </li>
       <li>
-        <a href="https://github.com/tobycm/tobycm-music-manager">Manage your downloaded music from a YouTube playlist easily</a>
+        <a href="https://github.com/tobycm/tobycm-music-manager">Manage your downloaded music from a YouTube playlist easily</a> - Used to manage
+        Toby's huge <a href="https://vsus.link/hcm">Happy Coding Music playlist</a>
       </li>
     </ul>
 
-    <h3>Me tinkering with some hardware:</h3>
-    <a href="https://www.reddit.com/r/homelab/comments/13krl7t/0_dollar_home_lab_in_basement/"
-      >https://www.reddit.com/r/homelab/comments/13krl7t/0_dollar_home_lab_in_basement/</a
-    >
+    <h3>Tinkering with some hardware:</h3>
+    <p>
+      Mostly how I self taught myself about servers and Linux:
+      <a href="https://www.reddit.com/r/homelab/comments/13krl7t/0_dollar_home_lab_in_basement/"
+        >https://www.reddit.com/r/homelab/comments/13krl7t/0_dollar_home_lab_in_basement/</a
+      >
+    </p>
+
+    <p>
+      Hardware + software magic: <a href="https://github.com/tobycm/loginfc">https://github.com/tobycm/loginfc</a> - Homemade security system :D -
+      Demo: <a href="https://youtu.be/sH1NHUF4jtQ">https://youtu.be/sH1NHUF4jtQ</a>
+    </p>
+
+    <h3>Services:</h3>
+    <ul>
+      <li>QR Code Generator: <a href="https://qr.tobycm.dev">https://qr.tobycm.dev</a></li>
+      <li>URL Shortener: <a href="https://shorl.tobycm.dev">https://shorl.tobycm.dev</a></li>
+      <li>Random Issue Picker: <a href="https://rip.tobycm.dev">https://rip.tobycm.dev</a></li>
+    </ul>
 
     <h3>
       There are more links on my
