add footer? and license

--- a/index.html
+++ b/index.html
@@ -119,5 +119,11 @@
       Feel free to contact me at
       <a href="mailto:toby@vsus.app">toby@vsus.app</a>
     </h3>
+
+    <hr />
+
+    <footer>
+      Copyright © <span id="year">2024</span> toby@vsus.app | GitHub: <a href="https://github.com/tobycm/tobycm.dev">tobycm/tobycm.dev</a>
+    </footer>
   </body>
 </html>
