--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
 
     <link rel="shortcut icon" href="smol logo.png" type="image/png" />
 
+    <!-- Open Graph meta tags -->
+    <meta property="og:title" content="Toby Cm's Personal Page" />
+    <meta property="og:description" content="Passionate high school student doing DevOps and friends" />
+    <meta property="og:image" content="/logo.png" />
+    <meta property="og:url" content="https://tobycm.dev/" />
+    <meta property="og:site_name" content="Toby Cm's Personal Page" />
+
     <link rel="stylesheet" href="index.css" />
 
     <link rel="stylesheet" id="theme" href="light.css" />
