fix: :fire: weird responsive issue :sob:

--- a/index.html
+++ b/index.html
@@ -100,9 +100,7 @@
     <h3>Tinkering with some hardware:</h3>
     <p>
       Mostly how I self taught myself about servers and Linux:
-      <a href="https://www.reddit.com/r/homelab/comments/13krl7t/0_dollar_home_lab_in_basement/"
-        >https://www.reddit.com/r/homelab/comments/13krl7t/0_dollar_home_lab_in_basement/</a
-      >
+      <a href="https://www.reddit.com/r/homelab/comments/13krl7t/0_dollar_home_lab_in_basement/">Reddit post</a>
     </p>
 
     <p>
