--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 
     <link rel="shortcut icon" href="smol logo.png" type="image/png" />
 
+    <meta name="description" content="Toby Cm is a passionate high school student doing DevOps with friends. Based in Penticton, BC, Canada!" />
+
     <!-- Open Graph meta tags -->
     <meta property="og:title" content="Toby Cm's Personal Page" />
     <meta property="og:description" content="Passionate high school student doing DevOps and friends" />
@@ -60,7 +62,7 @@
 
     <div style="display: flex; align-items: center; flex-direction: row">
       <h1>Hey! I'm Toby Cm</h1>
-      <img src="smol logo.png" alt="toby cm's logo" style="height: 2.125rem; margin-left: 0.5rem" />
+      <img src="smol logo.png" alt="toby cm's logo" height="34" style="height: 2.125rem; margin-left: 0.5rem" />
     </div>
 
     <h2>=> Currently a high school student</h2>
