i forgor about width

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
     <div style="display: flex; align-items: center; flex-direction: row">
       <h1>Hey! I'm Toby Cm</h1>
-      <img src="smol logo.png" alt="toby cm's logo" height="34" style="height: 2.125rem; margin-left: 0.5rem" />
+      <img src="smol logo.png" alt="toby cm's logo" height="34" width="34" style="height: 2.125rem; width: auto; margin-left: 0.5rem" />
     </div>
 
     <h2>=> Currently a high school student</h2>
