svg infinite res :fire:

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <link rel="shortcut icon" href="smol logo.png" type="image/png" />
+    <link rel="shortcut icon" href="/logo.svg" type="image/svg" />
 
     <meta name="description" content="Toby Cm is a passionate high school student doing DevOps with friends. Based in Penticton, BC, Canada!" />
 
@@ -60,10 +60,9 @@
       setTheme(theme);
     </script>
 
-    <div style="display: flex; align-items: center; flex-direction: row">
-      <h1>Hey! I'm Toby Cm</h1>
-      <img src="smol logo.png" alt="toby cm's logo" height="34" width="34" style="height: 2.125rem; width: auto; margin-left: 0.5rem" />
-    </div>
+    <h1>
+      Hey! I'm Toby Cm<img src="/logo.svg" alt="toby cm's logo" height="32" width="32" style="height: 2rem; width: auto; margin-left: 0.5rem" />
+    </h1>
 
     <h2>=> Currently a high school student</h2>
     <h2>=> Top 127th on <a href="https://www.codingame.com/multiplayer/clashofcode/leaderboard">CodinGame Clash of Code</a></h2>
@@ -109,6 +108,8 @@
       Hardware + software magic: <a href="https://github.com/tobycm/loginfc">https://github.com/tobycm/loginfc</a> - Homemade security system :D -
       Demo: <a href="https://youtu.be/sH1NHUF4jtQ">https://youtu.be/sH1NHUF4jtQ</a>
     </p>
+
+    <p>Member of <a href="https://pentictonrobotics.ca" target="_blank" rel="noopener noreferrer">Penticton Robotics</a> - Lead Coder</p>
 
     <h3>Services:</h3>
     <ul>
