the website that has the most unofficial contributors through grammars and typo errors :skull:

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <!-- Open Graph meta tags -->
     <meta property="og:title" content="Toby Cm's Personal Page" />
-    <meta property="og:description" content="Passionate high school student doing DevOps and friends" />
+    <meta property="og:description" content="Passionate high school student doing (DevOps and friends)" />
     <meta property="og:image" content="/logo.png" />
     <meta property="og:url" content="https://tobycm.dev/" />
     <meta property="og:site_name" content="Toby Cm's Personal Page" />
