add more projects xd

--- a/index.html
+++ b/index.html
@@ -61,7 +61,10 @@
     </script>
 
     <div style="display: flex; flex-direction: column; align-items: center">
-      <h1 style="font-size: 3rem">Hey! I'm Toby Cm<img src="/logo.svg" id="logo" alt="toby cm's logo" style="margin-left: 0.5rem" /></h1>
+      <div style="display: flex; align-items: center">
+        <h1 style="font-size: 3rem">Hey! I'm Toby Cm<img src="/logo.svg" id="logo" alt="toby cm's logo" style="margin-left: 0.5rem" /></h1>
+        <small>&nbsp;hover over images!</small>
+      </div>
       <h3>Professional coder and yapper</h3>
       <br />
       <h3>Third year at Penticton Secondary</h3>
@@ -120,6 +123,18 @@
           <a href="https://rip.tobycm.dev">https://rip.tobycm.dev</a>
         </div>
       </div>
+
+      <div class="project">
+        <a href="https://emochoice.ca"> <img src="./projects/emochoice.ca preview.png" alt="emochoice.ca preview" /> </a>
+        <div class="projectDescription">
+          <h2>Emochoice Web store</h2>
+          <p>
+            The web store of Emochoice, made in collaboration with
+            <a href="https://github.com/pdt1806">@pdt1806</a>
+          </p>
+          <a href="https://emochoice.ca">https://emochoice.ca</a>
+        </div>
+      </div>
     </div>
 
     <ul>
@@ -131,8 +146,8 @@
         <a href="https://github.com/tobycm/akatsuki-du-ca-bot-remastered">A Discord bot written in Python</a>
       </li>
       <li>
-        <a href="https://github.com/tobycm/emochoice">The web store of Emochoice, made in collaboration with </a>
-        <a href="https://github.com/pdt1806">@pdt1806</a> - Online at <a href="https://emochoice.ca">emochoice.ca</a>
+        <a href="https://github.com/tobycm/minecraft-recipes-api">Minecraft Recipes API</a> - A modern API for retrieving and managing Minecraft
+        recipes using Bun and ElysiaJS. API is online at <a href="https://mc-recp.tobycm.dev">https://mc-recp.tobycm.dev</a>
       </li>
       <li>
         <a href="https://github.com/tobycm/tobycm-music-manager">Manage your downloaded music from a YouTube playlist easily</a> - Used to manage
@@ -142,9 +157,13 @@
 
     <br />
 
-    <h3>Tinkering with some hardware:</h3>
+    <h2>Hardware:</h2>
+    <h3>Trying new stuff outside of my comfort zone: 3D Modelling, Making Electrical Schematic, Designing PCBs, etc.</h3>
+
+    <br />
+
     <p>
-      Making a hackpad: <a href="https://github.com/hackclub/hackpad/pull/642">Pull Request</a> , Case:
+      Making a hackpad: Case:
       <img
         src="https://raw.githubusercontent.com/tobycm/hackpad/refs/heads/main/hackpads/toby-hackpad/assets/case.png"
         alt="Toby's Hackpad Case"
@@ -168,12 +187,11 @@
         alt="Toby's Hackpad Schematic"
         style="height: 1rem"
         class="midBigZoom" />
+      , <a href="https://github.com/hackclub/hackpad/pull/642">Pull Request</a>
     </p>
 
     <p>
-      Making a hacker card:
-      <a href="https://github.com/hackclub/OnBoard/pull/1476">Pull Request</a>
-      , Schematic:
+      Making a hacker card: Schematic:
       <img
         src="https://raw.githubusercontent.com/tobycm/OnBoard/refs/heads/main/projects/tobycm-namecard/assets/schematic.png"
         alt="Toby's Hacker Card Schematic"
@@ -192,6 +210,12 @@
         alt="Toby's Hacker Card Printed PCB"
         style="height: 1rem"
         class="biggerZoom" />
+      , <a href="https://github.com/hackclub/OnBoard/pull/1476">Pull Request</a>
+    </p>
+
+    <p>
+      Making a case for my electronics project:
+      <img src="./projects/pcb case and top.jpg" alt="Toby's PCB Case and Top for Electronics Project" style="height: 1rem" class="midBigZoom" />
     </p>
 
     <!-- TODO: add bakebuild -->
