penticton robotics :D raver preview changes, some more info added

--- a/index.html
+++ b/index.html
@@ -67,17 +67,20 @@
       </div>
       <h3>Professional coder and yapper</h3>
       <br />
-      <h3>Third year at Penticton Secondary</h3>
       <h3>
         Leader of <a href="https://tobycm.github.io/skibidi-penhi/">Pen High Coding Club</a> supported by
         <a href="https://hackclub.com/">Hack Club</a>
       </h3>
       <h3>
         Lead Coder of
-        <a href="https://pentictonrobotics.ca/">Penticton Robotics</a>
+        <a href="https://pentictonrobotics.ca/">Penticton Robotics</a> &mdash; 2025 ReefScape&trade;
+        <span style="color: var(--primary-color)">Champion</span> 🏅
       </h3>
+      <h3>Third year at Penticton Secondary</h3>
       <br />
       <p><i>a simple website doesn't mean it's a bad website</i></p>
+      <p><i>for the best experience, check out this website on a desktop</i></p>
+
       <br />
 
       <h1>Projects:</h1>
@@ -107,6 +110,27 @@
       </div>
 
       <div class="project">
+        <a href="https://emochoice.ca"> <img src="./projects/emochoice.ca preview.png" alt="emochoice.ca preview" /> </a>
+        <div class="projectDescription">
+          <h2>Emochoice Web store</h2>
+          <p>
+            The web store of Emochoice, made in collaboration with
+            <a href="https://github.com/pdt1806">@pdt1806</a>
+          </p>
+          <a href="https://emochoice.ca">https://emochoice.ca</a>
+        </div>
+      </div>
+
+      <div class="project">
+        <a href="https://pentictonrobotics.ca"> <img src="./projects/pentictonrobotics.ca preview.png" alt="pentictonrobotics.ca preview" /> </a>
+        <div class="projectDescription">
+          <h2>Penticton Robotics</h2>
+          <p>The website of Penticton Robotics &mdash; a robotics team from Penticton, BC, Canada. FRC Team #8339</p>
+          <a href="https://pentictonrobotics.ca">https://pentictonrobotics.ca</a>
+        </div>
+      </div>
+
+      <div class="project">
         <a href="https://shorl.tobycm.dev"> <img src="./projects/shorl.tobycm.dev preview.png" alt="shorl.tobycm.dev preview" /> </a>
         <div class="projectDescription">
           <h2>URL Shortener</h2>
@@ -121,18 +145,6 @@
           <h2>Random Issue Picker</h2>
           <p>A random GitHub issue picker for a repo</p>
           <a href="https://rip.tobycm.dev">https://rip.tobycm.dev</a>
-        </div>
-      </div>
-
-      <div class="project">
-        <a href="https://emochoice.ca"> <img src="./projects/emochoice.ca preview.png" alt="emochoice.ca preview" /> </a>
-        <div class="projectDescription">
-          <h2>Emochoice Web store</h2>
-          <p>
-            The web store of Emochoice, made in collaboration with
-            <a href="https://github.com/pdt1806">@pdt1806</a>
-          </p>
-          <a href="https://emochoice.ca">https://emochoice.ca</a>
         </div>
       </div>
     </div>
