--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
 
     <div style="display: flex; flex-direction: column; align-items: center">
       <div style="display: flex; align-items: center">
-        <h1 style="font-size: 3rem">Hey! I'm Toby Cm<img src="/logo.svg" id="logo" alt="toby cm's logo" style="margin-left: 0.5rem" /></h1>
-        <small>&nbsp;hover over images!</small>
+        <h1>Hey! I'm Toby Cm<img src="/logo.svg" id="logo" alt="toby cm's logo" style="margin-left: 0.5rem" /></h1>
+        <small id="hoverTip">&nbsp;hover over images!</small>
       </div>
       <h3>Professional coder and yapper</h3>
       <br />
@@ -93,7 +93,7 @@
         <div class="projectDescription">
           <h2>QR Code Generator</h2>
           <p>Quick and easy QR code generator for your links, phone number, etc</p>
-          <a href="https://qr.tobycm.dev">https://qr.tobycm.dev</a>
+          <a href="https://qr.tobycm.dev">qr.tobycm.dev</a>
         </div>
       </div>
 
@@ -101,11 +101,8 @@
         <a href="https://tobycm.github.io/raver/welcome/"> <img src="./projects/raver.tobycm.dev preview.png" alt="raver.tobycm.dev preview" /> </a>
         <div class="projectDescription">
           <h2>Raver</h2>
-          <p>
-            Rave to the music!! Make a light party with your music that is all processing locally :) Sync up multiple devices and screens for the best
-            homemade light party!
-          </p>
-          <a href="https://tobycm.github.io/raver/welcome/">https://raver.tobycm.dev</a>
+          <p>Rave to the music!! Sync up multiple devices and screens for the best homemade light party!</p>
+          <a href="https://tobycm.github.io/raver/welcome/">raver.tobycm.dev</a>
         </div>
       </div>
 
@@ -117,7 +114,7 @@
             The web store of Emochoice, made in collaboration with
             <a href="https://github.com/pdt1806">@pdt1806</a>
           </p>
-          <a href="https://emochoice.ca">https://emochoice.ca</a>
+          <a href="https://emochoice.ca">emochoice.ca</a>
         </div>
       </div>
 
@@ -125,8 +122,8 @@
         <a href="https://pentictonrobotics.ca"> <img src="./projects/pentictonrobotics.ca preview.png" alt="pentictonrobotics.ca preview" /> </a>
         <div class="projectDescription">
           <h2>Penticton Robotics</h2>
-          <p>The website of Penticton Robotics &mdash; a robotics team from Penticton, BC, Canada. FRC Team #8339</p>
-          <a href="https://pentictonrobotics.ca">https://pentictonrobotics.ca</a>
+          <p>FRC Team #8339 &mdash; a robotics team from Penticton, BC, Canada.</p>
+          <a href="https://pentictonrobotics.ca">pentictonrobotics.ca</a>
         </div>
       </div>
 
@@ -135,7 +132,7 @@
         <div class="projectDescription">
           <h2>URL Shortener</h2>
           <p>Easy to use short link manager</p>
-          <a href="https://shorl.tobycm.dev">https://shorl.tobycm.dev</a>
+          <a href="https://shorl.tobycm.dev">shorl.tobycm.dev</a>
         </div>
       </div>
 
@@ -144,7 +141,7 @@
         <div class="projectDescription">
           <h2>Random Issue Picker</h2>
           <p>A random GitHub issue picker for a repo</p>
-          <a href="https://rip.tobycm.dev">https://rip.tobycm.dev</a>
+          <a href="https://rip.tobycm.dev">rip.tobycm.dev</a>
         </div>
       </div>
     </div>
@@ -176,58 +173,73 @@
 
     <p>
       Making a hackpad: Case:
-      <img
-        src="https://raw.githubusercontent.com/tobycm/hackpad/refs/heads/main/hackpads/toby-hackpad/assets/case.png"
-        alt="Toby's Hackpad Case"
-        style="height: 1rem"
-        class="bigZoom" />
+      <a href="https://raw.githubusercontent.com/tobycm/hackpad/refs/heads/main/hackpads/toby-hackpad/assets/case.png" target="_blank">
+        <img
+          src="https://raw.githubusercontent.com/tobycm/hackpad/refs/heads/main/hackpads/toby-hackpad/assets/case.png"
+          alt="Toby's Hackpad Case"
+          style="height: 1rem"
+          class="bigZoom"
+      /></a>
       , Top:
-      <img
-        src="https://raw.githubusercontent.com/tobycm/hackpad/refs/heads/main/hackpads/toby-hackpad/assets/top.png"
-        alt="Toby's Hackpad Top"
-        style="height: 1rem"
-        class="bigZoom" />
+      <a href="https://raw.githubusercontent.com/tobycm/hackpad/refs/heads/main/hackpads/toby-hackpad/assets/top.png" target="_blank">
+        <img
+          src="https://raw.githubusercontent.com/tobycm/hackpad/refs/heads/main/hackpads/toby-hackpad/assets/top.png"
+          alt="Toby's Hackpad Top"
+          style="height: 1rem"
+          class="bigZoom"
+      /></a>
       , PCB:
-      <img
-        src="https://raw.githubusercontent.com/tobycm/hackpad/refs/heads/main/hackpads/toby-hackpad/assets/pcb.png"
-        alt="Toby's Hackpad PCB"
-        style="height: 1rem"
-        class="biggerZoom" />
+      <a href="https://raw.githubusercontent.com/tobycm/hackpad/refs/heads/main/hackpads/toby-hackpad/assets/pcb.png" target="_blank">
+        <img
+          src="https://raw.githubusercontent.com/tobycm/hackpad/refs/heads/main/hackpads/toby-hackpad/assets/pcb.png"
+          alt="Toby's Hackpad PCB"
+          style="height: 1rem"
+          class="biggerZoom"
+      /></a>
       , Schematic:
-      <img
-        src="https://raw.githubusercontent.com/tobycm/hackpad/refs/heads/main/hackpads/toby-hackpad/assets/schematic.png"
-        alt="Toby's Hackpad Schematic"
-        style="height: 1rem"
-        class="midBigZoom" />
+      <a href="https://raw.githubusercontent.com/tobycm/hackpad/refs/heads/main/hackpads/toby-hackpad/assets/schematic.png" target="_blank">
+        <img
+          src="https://raw.githubusercontent.com/tobycm/hackpad/refs/heads/main/hackpads/toby-hackpad/assets/schematic.png"
+          alt="Toby's Hackpad Schematic"
+          style="height: 1rem"
+          class="midBigZoom"
+      /></a>
       , <a href="https://github.com/hackclub/hackpad/pull/642">Pull Request</a>
     </p>
 
     <p>
       Making a hacker card: Schematic:
-      <img
-        src="https://raw.githubusercontent.com/tobycm/OnBoard/refs/heads/main/projects/tobycm-namecard/assets/schematic.png"
-        alt="Toby's Hacker Card Schematic"
-        style="height: 1rem"
-        class="midBigZoom" />
+      <a href="https://raw.githubusercontent.com/tobycm/OnBoard/refs/heads/main/projects/tobycm-namecard/assets/schematic.png" target="_blank">
+        <img
+          src="https://raw.githubusercontent.com/tobycm/OnBoard/refs/heads/main/projects/tobycm-namecard/assets/schematic.png"
+          alt="Toby's Hacker Card Schematic"
+          style="height: 1rem"
+          class="midBigZoom"
+      /></a>
       , Design PCB:
-      <img
-        src="https://raw.githubusercontent.com/tobycm/OnBoard/refs/heads/main/projects/tobycm-namecard/assets/design_pcb.png"
-        alt="Toby's Hacker Card PCB"
-        style="height: 1rem"
-        class="midBigZoom" />
-
+      <a href="https://raw.githubusercontent.com/tobycm/OnBoard/refs/heads/main/projects/tobycm-namecard/assets/design_pcb.png" target="_blank">
+        <img
+          src="https://raw.githubusercontent.com/tobycm/OnBoard/refs/heads/main/projects/tobycm-namecard/assets/design_pcb.png"
+          alt="Toby's Hacker Card PCB"
+          style="height: 1rem"
+          class="midBigZoom"
+      /></a>
       , printed PCB:
-      <img
-        src="https://raw.githubusercontent.com/tobycm/OnBoard/refs/heads/main/projects/tobycm-namecard/assets/printed_pcb.png"
-        alt="Toby's Hacker Card Printed PCB"
-        style="height: 1rem"
-        class="biggerZoom" />
+      <a href="https://raw.githubusercontent.com/tobycm/OnBoard/refs/heads/main/projects/tobycm-namecard/assets/printed_pcb.png" target="_blank">
+        <img
+          src="https://raw.githubusercontent.com/tobycm/OnBoard/refs/heads/main/projects/tobycm-namecard/assets/printed_pcb.png"
+          alt="Toby's Hacker Card Printed PCB"
+          style="height: 1rem"
+          class="biggerZoom"
+      /></a>
       , <a href="https://github.com/hackclub/OnBoard/pull/1476">Pull Request</a>
     </p>
 
     <p>
       Making a case for my electronics project:
-      <img src="./projects/pcb case and top.jpg" alt="Toby's PCB Case and Top for Electronics Project" style="height: 1rem" class="midBigZoom" />
+      <a href="./projects/pcb case and top.jpg" target="_blank"
+        ><img src="./projects/pcb case and top.jpg" alt="Toby's PCB Case and Top for Electronics Project" style="height: 1rem" class="midBigZoom"
+      /></a>
     </p>
 
     <!-- TODO: add bakebuild -->
@@ -260,7 +272,7 @@
 
     <footer>
       Copyright © <span id="year">2025</span> toby@vsus.app | GitHub: <a href="https://github.com/tobycm/tobycm.dev">tobycm/tobycm.dev</a> |
-      <a href="./resume 2025.pdf">maximizing shareholders value</a>
+      <a href="./resume 2025.pdf">maximizing shareholders value</a> | shoutout to my god friend who want to take over las vegas (i get california 😋)
     </footer>
   </body>
 </html>
