--- a/index.html
+++ b/index.html
@@ -272,7 +272,8 @@
 
     <footer>
       Copyright © <span id="year">2025</span> toby@vsus.app | GitHub: <a href="https://github.com/tobycm/tobycm.dev">tobycm/tobycm.dev</a> |
-      <a href="./resume 2025.pdf">maximizing shareholders value</a> | shoutout to my god friend who want to take over las vegas (i get california 😋)
+      <a href="./resume mar 2025.pdf">maximizing shareholders value</a> | shoutout to my god friend who want to take over las vegas (i get california
+      😋)
     </footer>
   </body>
 </html>
