--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 
     <link rel="stylesheet" href="index.css" />
 
-    <link rel="stylesheet" id="theme" href="light.css" />
-    <link rel="preload" href="dark.css" as="style" />
+    <link rel="stylesheet" id="theme" href="dark.css" />
+    <link rel="preload" href="light.css" as="style" />
 
     <title>Toby Cm</title>
   </head>
@@ -80,6 +80,10 @@
       <br />
       <p><i>a simple website doesn't mean it's a bad website</i></p>
       <p><i>for the best experience, check out this website on a desktop</i></p>
+
+      <br />
+
+      <audio src="./chess type beat ⧸⧸ tiktok dance minecraft music ♪ [yvyA1yiyxgI].mp3" controls></audio>
 
       <br />
 
@@ -259,7 +263,7 @@
 
     <h4>Top 50th (World), 6th (Canada) on <a href="https://www.codingame.com/multiplayer/clashofcode/leaderboard">CodinGame Clash of Code</a></h4>
     <h3>
-      There are more projects on my
+      Check out more projects on my
       <a href="https://github.com/tobycm">GitHub profile</a>
     </h3>
 
