--- a/index.html
+++ b/index.html
@@ -15,50 +15,23 @@
     <meta property="og:url" content="https://tobycm.dev/" />
     <meta property="og:site_name" content="Toby Cm's Personal Page" />
 
-    <link rel="stylesheet" href="index.css" />
+    <link rel="stylesheet" href="root.css" />
+    <link rel="stylesheet" href="imgzoom.css" />
 
     <link rel="stylesheet" id="theme" href="dark.css" />
     <link rel="preload" href="light.css" as="style" />
+
+    <link rel="stylesheet" href="index.css" />
 
     <title>Toby Cm</title>
   </head>
 
   <body>
-    <script>
-      /**
-       * Sets the theme of the page. If no theme is provided, it will toggle between light and dark.
-       *
-       * @param {string | undefined} theme The theme to set.
-       *
-       * @returns {void}
-       */
-      function setTheme(theme) {
-        /** @type {HTMLLinkElement} */
-        const css = document.getElementById("theme");
-
-        if (!theme) theme = css.href.endsWith("light.css") ? "dark.css" : "light.css";
-
-        css.href = theme;
-
-        localStorage.setItem("theme", theme);
-
-        document.getElementById("themeButton").textContent = theme === "light.css" ? "🔆" : "🌙";
-      }
-    </script>
+    <script src="/theme.js"></script>
 
     <div style="float: right">
       <button onclick="setTheme()" id="themeButton">🔆</button>
     </div>
-
-    <script>
-      let theme = localStorage.getItem("theme");
-
-      const prefersDarkScheme = window.matchMedia("(prefers-color-scheme: dark)");
-
-      if (!theme && prefersDarkScheme.matches) theme = "dark.css";
-
-      setTheme(theme);
-    </script>
 
     <div style="display: flex; flex-direction: column; align-items: center">
       <div style="display: flex; align-items: center">
@@ -71,14 +44,15 @@
         Leader of <a href="https://tobycm.github.io/skibidi-penhi/">Pen High Coding Club</a> supported by
         <a href="https://hackclub.com/">Hack Club</a>
       </h3>
-      <h3>
-        Lead Coder of
-        <a href="https://pentictonrobotics.ca/">Penticton Robotics</a> &mdash; 2025 ReefScape&trade;
-        <span style="color: var(--primary-color)">Champion</span> 🏅
-      </h3>
+      <a href="/robotics.html">
+        <h3 style="color: var(--primary-color); text-align: center">
+          Lead Coder of Penticton Robotics &mdash; 🎆 2025 ReefScape&trade; Champion 🏅🎆
+        </h3>
+        <p style="color: gray; text-align: center; font-size: smaller">click me to find out more</p>
+      </a>
       <h3>Third year at Penticton Secondary</h3>
       <br />
-      <p><i>a simple website doesn't mean it's a bad website</i></p>
+      <!-- <p><i>a simple website doesn't mean it's a bad website</i></p> -->
       <p><i>for the best experience, check out this website on a desktop</i></p>
 
       <br />
@@ -93,7 +67,7 @@
 
     <div class="projects">
       <div class="project">
-        <a href="https://qr.tobycm.dev"> <img src="./projects/qr.tobycm.dev preview.png" alt="qr.tobycm.dev preview" /> </a>
+        <a href="https://qr.tobycm.dev"> <img src="./projects/qr.tobycm.dev preview.png" alt="qr.tobycm.dev preview" class="startLeft" /> </a>
         <div class="projectDescription">
           <h2>QR Code Generator</h2>
           <p>Quick and easy QR code generator for your links, phone number, etc</p>
@@ -102,7 +76,9 @@
       </div>
 
       <div class="project">
-        <a href="https://tobycm.github.io/raver/welcome/"> <img src="./projects/raver.tobycm.dev preview.png" alt="raver.tobycm.dev preview" /> </a>
+        <a href="https://tobycm.github.io/raver/welcome/">
+          <img src="./projects/raver.tobycm.dev preview.png" alt="raver.tobycm.dev preview" class="startRight" />
+        </a>
         <div class="projectDescription">
           <h2>Raver</h2>
           <p>Rave to the music!! Sync up multiple devices and screens for the best homemade light party!</p>
@@ -111,7 +87,7 @@
       </div>
 
       <div class="project">
-        <a href="https://emochoice.ca"> <img src="./projects/emochoice.ca preview.png" alt="emochoice.ca preview" /> </a>
+        <a href="https://emochoice.ca"> <img src="./projects/emochoice.ca preview.png" alt="emochoice.ca preview" class="startLeft" /> </a>
         <div class="projectDescription">
           <h2>Emochoice Web store</h2>
           <p>
@@ -123,7 +99,9 @@
       </div>
 
       <div class="project">
-        <a href="https://pentictonrobotics.ca"> <img src="./projects/pentictonrobotics.ca preview.png" alt="pentictonrobotics.ca preview" /> </a>
+        <a href="https://pentictonrobotics.ca">
+          <img src="./projects/pentictonrobotics.ca preview.png" alt="pentictonrobotics.ca preview" class="startRight" />
+        </a>
         <div class="projectDescription">
           <h2>Penticton Robotics</h2>
           <p>FRC Team #8339 &mdash; a robotics team from Penticton, BC, Canada.</p>
@@ -132,7 +110,9 @@
       </div>
 
       <div class="project">
-        <a href="https://shorl.tobycm.dev"> <img src="./projects/shorl.tobycm.dev preview.png" alt="shorl.tobycm.dev preview" /> </a>
+        <a href="https://shorl.tobycm.dev">
+          <img src="./projects/shorl.tobycm.dev preview.png" alt="shorl.tobycm.dev preview" class="startLeft" />
+        </a>
         <div class="projectDescription">
           <h2>URL Shortener</h2>
           <p>Easy to use short link manager</p>
@@ -141,7 +121,7 @@
       </div>
 
       <div class="project">
-        <a href="https://rip.tobycm.dev"> <img src="./projects/rip.tobycm.dev preview.png" alt="rip.tobycm.dev preview" /> </a>
+        <a href="https://rip.tobycm.dev"> <img src="./projects/rip.tobycm.dev preview.png" alt="rip.tobycm.dev preview" class="startRight" /> </a>
         <div class="projectDescription">
           <h2>Random Issue Picker</h2>
           <p>A random GitHub issue picker for a repo</p>
@@ -183,6 +163,8 @@
           alt="Toby's Hackpad Case"
           style="height: 1rem"
           class="bigZoom"
+          fetchPriority="low"
+          loading="lazy"
       /></a>
       , Top:
       <a href="https://raw.githubusercontent.com/tobycm/hackpad/refs/heads/main/hackpads/toby-hackpad/assets/top.png" target="_blank">
@@ -191,6 +173,8 @@
           alt="Toby's Hackpad Top"
           style="height: 1rem"
           class="bigZoom"
+          fetchPriority="low"
+          loading="lazy"
       /></a>
       , PCB:
       <a href="https://raw.githubusercontent.com/tobycm/hackpad/refs/heads/main/hackpads/toby-hackpad/assets/pcb.png" target="_blank">
@@ -199,6 +183,8 @@
           alt="Toby's Hackpad PCB"
           style="height: 1rem"
           class="biggerZoom"
+          fetchPriority="low"
+          loading="lazy"
       /></a>
       , Schematic:
       <a href="https://raw.githubusercontent.com/tobycm/hackpad/refs/heads/main/hackpads/toby-hackpad/assets/schematic.png" target="_blank">
@@ -207,6 +193,8 @@
           alt="Toby's Hackpad Schematic"
           style="height: 1rem"
           class="midBigZoom"
+          fetchPriority="low"
+          loading="lazy"
       /></a>
       , <a href="https://github.com/hackclub/hackpad/pull/642">Pull Request</a>
     </p>
@@ -219,6 +207,8 @@
           alt="Toby's Hacker Card Schematic"
           style="height: 1rem"
           class="midBigZoom"
+          fetchPriority="low"
+          loading="lazy"
       /></a>
       , Design PCB:
       <a href="https://raw.githubusercontent.com/tobycm/OnBoard/refs/heads/main/projects/tobycm-namecard/assets/design_pcb.png" target="_blank">
@@ -227,6 +217,8 @@
           alt="Toby's Hacker Card PCB"
           style="height: 1rem"
           class="midBigZoom"
+          fetchPriority="low"
+          loading="lazy"
       /></a>
       , printed PCB:
       <a href="https://raw.githubusercontent.com/tobycm/OnBoard/refs/heads/main/projects/tobycm-namecard/assets/printed_pcb.png" target="_blank">
@@ -235,6 +227,8 @@
           alt="Toby's Hacker Card Printed PCB"
           style="height: 1rem"
           class="biggerZoom"
+          fetchPriority="low"
+          loading="lazy"
       /></a>
       , <a href="https://github.com/hackclub/OnBoard/pull/1476">Pull Request</a>
     </p>
@@ -242,12 +236,18 @@
     <p>
       Making a case for my electronics project:
       <a href="./projects/pcb case and top.jpg" target="_blank"
-        ><img src="./projects/pcb case and top.jpg" alt="Toby's PCB Case and Top for Electronics Project" style="height: 1rem" class="midBigZoom"
+        ><img
+          src="./projects/pcb case and top.jpg"
+          alt="Toby's PCB Case and Top for Electronics Project"
+          style="height: 1rem"
+          class="midBigZoom"
+          fetchPriority="low"
       /></a>
     </p>
 
     <!-- TODO: add bakebuild -->
     <!-- TODO: add more hackclub stuff -->
+    <!-- TODO: really add more hackclub stuff -->
 
     <p>
       Mostly how I self taught myself about servers and Linux:
@@ -272,12 +272,12 @@
       <a href="mailto:toby@vsus.app">toby@vsus.app</a>
     </h3>
 
-    <hr />
-
     <footer>
+      <hr />
       Copyright © <span id="year">2025</span> toby@vsus.app | GitHub: <a href="https://github.com/tobycm/tobycm.dev">tobycm/tobycm.dev</a> |
-      <a href="./resume mar 2025.pdf">maximizing shareholders value</a> | shoutout to my god friend who want to take over las vegas (i get california
-      😋)
+      <a href="./resume mar 2025.pdf">maximizing shareholders value</a> | shoutout to my friend who want to take over las vegas
     </footer>
+
+    <script async src="anchors.js"></script>
   </body>
 </html>
