small img overlapping fix + signature

--- a/robotics.html
+++ b/robotics.html
@@ -77,10 +77,18 @@
       </div>
     </div>
 
+    <div id="xd">
+      <div>
+        <img src="signature.svg" />
+        <p style="text-align: center; translate: 0 -25px">- tobycm</p>
+      </div>
+      <img src="robotics/IMG_3405.webp" />
+    </div>
+
     <footer>
       <hr />
-      Copyright © <span id="year">2025</span> toby@vsus.app | GitHub: <a href="https://github.com/tobycm/tobycm.dev">tobycm/tobycm.dev</a> |
-      <a href="./resume mar 2025.pdf">maximizing shareholders value</a> | shoutout to my friend who want to take over las vegas
+      Copyright © <span id="year">2025</span> toby@vsus.app | GitHub: <a href="https://github.com/tobycm/tobycm.dev">tobycm/tobycm.dev</a> | shoutout
+      to my friend who want to take over las vegas
     </footer>
 
     <script async src="anchors.js"></script>
