refactor soon lol

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         Leader of <a href="https://tobycm.github.io/skibidi-penhi/">Pen High Coding Club</a> supported by
         <a href="https://hackclub.com/">Hack Club</a>
       </h3>
-      <a href="/robotics.html">
+      <a href="/robotics">
         <h3 style="color: var(--primary-color); text-align: center">
           Lead Coder of Penticton Robotics &mdash; 🎆 2025 ReefScape&trade; Champion 🏅🎆
         </h3>
