--- a/robotics/index.html
+++ b/robotics/index.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>The robotics side of tobycm</title>
 
-    <link rel="stylesheet" href="root.css" />
-    <link rel="stylesheet" href="imgzoom.css" />
+    <link rel="stylesheet" href="/root.css" />
+    <link rel="stylesheet" href="/imgzoom.css" />
 
-    <link rel="stylesheet" id="theme" href="dark.css" />
-    <link rel="preload" href="light.css" as="style" />
+    <link rel="stylesheet" id="theme" href="/dark.css" />
+    <link rel="preload" href="/light.css" as="style" />
 
-    <link rel="stylesheet" href="robotics.css" />
+    <link rel="stylesheet" href="index.css" />
   </head>
   <body>
     <script src="/theme.js"></script>
@@ -25,10 +25,10 @@
     <br />
 
     <div id="opening">
-      <img src="robotics/20250302_175402998_iOS 1 square.webp" style="transform-origin: top left; margin-left: 0" fetchpriority="high" />
-      <img src="robotics/_MG_9181.webp" fetchpriority="low" />
-      <img src="robotics/_MG_9190.webp" fetchpriority="low" />
-      <img src="robotics/xd.webp" fetchpriority="low" />
+      <img src="20250302_175402998_iOS 1 square.webp" style="transform-origin: top left; margin-left: 0" fetchpriority="high" />
+      <img src="_MG_9181.webp" fetchpriority="low" />
+      <img src="_MG_9190.webp" fetchpriority="low" />
+      <img src="xd.webp" fetchpriority="low" />
     </div>
 
     <a href="https://pentictonrobotics.ca">
@@ -45,7 +45,7 @@
     <div class="competitionsContainer">
       <div class="competitions">
         <div class="competition">
-          <a href="https://www.firstinspires.org/robotics/frc/game-and-season">
+          <a href="https://www.firstinspires.org/frc/game-and-season">
             <img
               src="https://www.firstinspires.org/sites/default/files/2024-banner/frc_reefscape.gif"
               alt="2025 FIRST Robotics Competition: Reefscape"
@@ -60,7 +60,7 @@
           </div>
         </div>
         <div class="competition">
-          <a href="https://www.firstinspires.org/robotics/frc/game-and-season">
+          <a href="https://www.firstinspires.org/frc/game-and-season">
             <img
               src="https://upload.wikimedia.org/wikipedia/en/8/88/Crescendo_FRC_Logo.svg"
               alt="2024 FIRST Robotics Competition: Crescendo"
@@ -79,10 +79,10 @@
 
     <div id="xd">
       <div>
-        <img src="signature.svg" />
+        <img src="signature.svg" fetchpriority="low" loading="lazy" />
         <p style="text-align: center; translate: 0 -25px">- tobycm</p>
       </div>
-      <img src="robotics/IMG_3405.webp" />
+      <img src="IMG_3405.webp" fetchpriority="low" loading="lazy" />
     </div>
 
     <footer>
@@ -91,6 +91,6 @@
       to my friend who want to take over las vegas
     </footer>
 
-    <script async src="anchors.js"></script>
+    <script async src="/anchors.js"></script>
   </body>
 </html>
