--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
     <meta property="og:url" content="https://tobycm.dev/" />
     <meta property="og:site_name" content="Toby Cm's Personal Page" />
 
-    <link rel="stylesheet" href="root.css" />
-    <link rel="stylesheet" href="imgzoom.css" />
+    <link rel="stylesheet" href="/root.css" />
+    <link rel="stylesheet" href="/imgzoom.css" />
 
-    <link rel="stylesheet" id="theme" href="dark.css" />
-    <link rel="preload" href="light.css" as="style" />
+    <link rel="stylesheet" id="theme" href="/dark.css" />
+    <link rel="preload" href="/light.css" as="style" />
 
     <link rel="stylesheet" href="index.css" />
 
@@ -278,6 +278,6 @@
       <a href="./resume mar 2025.pdf">maximizing shareholders value</a> | shoutout to my friend who want to take over las vegas
     </footer>
 
-    <script async src="anchors.js"></script>
+    <script async src="/anchors.js"></script>
   </body>
 </html>
