--- a/robotics/index.html
+++ b/robotics/index.html
@@ -79,7 +79,7 @@
 
     <div id="xd">
       <div>
-        <img src="signature.svg" fetchpriority="low" loading="lazy" />
+        <img src="/signature.svg" fetchpriority="low" loading="lazy" />
         <p style="text-align: center; translate: 0 -25px">- tobycm</p>
       </div>
       <img src="IMG_3405.webp" fetchpriority="low" loading="lazy" />
