--- a/robotics/index.html
+++ b/robotics/index.html
@@ -45,7 +45,7 @@
     <div class="competitionsContainer">
       <div class="competitions">
         <div class="competition">
-          <a href="https://www.firstinspires.org/frc/game-and-season">
+          <a href="https://www.firstinspires.org/robotics/frc/game-and-season">
             <img
               src="https://www.firstinspires.org/sites/default/files/2024-banner/frc_reefscape.gif"
               alt="2025 FIRST Robotics Competition: Reefscape"
@@ -60,7 +60,7 @@
           </div>
         </div>
         <div class="competition">
-          <a href="https://www.firstinspires.org/frc/game-and-season">
+          <a href="https://www.firstinspires.org/robotics/frc/game-and-season">
             <img
               src="https://upload.wikimedia.org/wikipedia/en/8/88/Crescendo_FRC_Logo.svg"
               alt="2024 FIRST Robotics Competition: Crescendo"
