--- a/robotics/index.html
+++ b/robotics/index.html
@@ -16,7 +16,7 @@
   <body>
     <script src="/theme.js"></script>
 
-    <a href="/index.html" class="home">&lt;- back to home page</a>
+    <a href="/index.html" class="home exclude">&lt;- back to home page</a>
 
     <div style="float: right">
       <button onclick="setTheme()" id="themeButton">🔆</button>
