--- a/robotics/index.html
+++ b/robotics/index.html
@@ -25,10 +25,76 @@
     <br />
 
     <div id="opening">
-      <img src="20250302_175402998_iOS 1 square.webp" style="transform-origin: top left; margin-left: 0" fetchpriority="high" />
-      <img src="_MG_9181.webp" fetchpriority="low" />
-      <img src="_MG_9190.webp" fetchpriority="low" />
-      <img src="xd.webp" fetchpriority="low" />
+      <img
+        src="20250302_175402998_iOS 1 square.webp"
+        srcset="20250302_175402998_iOS 1 square.webp 2049w, 20250302_175402998_iOS 1 square/x2048.webp 2048w, 20250302_175402998_iOS 1 square/x2048.png 2048w, 20250302_175402998_iOS 1 square/x1536.webp 1536w, 20250302_175402998_iOS 1 square/x1536.png 1536w, 20250302_175402998_iOS 1 square/x1024.webp 1024w, 20250302_175402998_iOS 1 square/x1024.png 1024w, 20250302_175402998_iOS 1 square/x768.webp 768w, 20250302_175402998_iOS 1 square/x768.png 768w, 20250302_175402998_iOS 1 square/x512.webp 512w, 20250302_175402998_iOS 1 square/x512.png 512w, 20250302_175402998_iOS 1 square/x384.webp 384w, 20250302_175402998_iOS 1 square/x384.png 384w, 20250302_175402998_iOS 1 square/x256.webp 256w, 20250302_175402998_iOS 1 square/x256.png 256w, 20250302_175402998_iOS 1 square/x192.webp 192w, 20250302_175402998_iOS 1 square/x192.png 192w"
+        style="transform-origin: top left; margin-left: 0"
+        fetchpriority="high" />
+
+      <img
+        src="_MG_9181.webp"
+        srcset="
+          _MG_9181.webp       2049w,
+          _MG_9181/x2048.webp 2048w,
+          _MG_9181/x2048.png  2048w,
+          _MG_9181/x1536.webp 1536w,
+          _MG_9181/x1536.png  1536w,
+          _MG_9181/x1024.webp 1024w,
+          _MG_9181/x1024.png  1024w,
+          _MG_9181/x768.webp   768w,
+          _MG_9181/x768.png    768w,
+          _MG_9181/x512.webp   512w,
+          _MG_9181/x512.png    512w,
+          _MG_9181/x384.webp   384w,
+          _MG_9181/x384.png    384w,
+          _MG_9181/x256.webp   256w,
+          _MG_9181/x256.png    256w,
+          _MG_9181/x192.webp   192w,
+          _MG_9181/x192.png    192w
+        "
+        fetchpriority="low" />
+
+      <img
+        src="_MG_9190.webp"
+        srcset="
+          _MG_9190.webp       2049w,
+          _MG_9190/x2048.webp 2048w,
+          _MG_9190/x2048.png  2048w,
+          _MG_9190/x1536.webp 1536w,
+          _MG_9190/x1536.png  1536w,
+          _MG_9190/x1024.webp 1024w,
+          _MG_9190/x1024.png  1024w,
+          _MG_9190/x768.webp   768w,
+          _MG_9190/x768.png    768w,
+          _MG_9190/x512.webp   512w,
+          _MG_9190/x512.png    512w,
+          _MG_9190/x384.webp   384w,
+          _MG_9190/x384.png    384w,
+          _MG_9190/x256.webp   256w,
+          _MG_9190/x256.png    256w,
+          _MG_9190/x192.webp   192w,
+          _MG_9190/x192.png    192w
+        "
+        fetchpriority="low" />
+
+      <img
+        src="xd.webp"
+        srcset="
+          xd.webp       1025w,
+          xd/x1024.webp 1024w,
+          xd/x1024.png  1024w,
+          xd/x768.webp   768w,
+          xd/x768.png    768w,
+          xd/x512.webp   512w,
+          xd/x512.png    512w,
+          xd/x384.webp   384w,
+          xd/x384.png    384w,
+          xd/x256.webp   256w,
+          xd/x256.png    256w,
+          xd/x192.webp   192w,
+          xd/x192.png    192w
+        "
+        fetchpriority="low" />
     </div>
 
     <a href="https://pentictonrobotics.ca">
@@ -82,7 +148,29 @@
         <img src="/signature.svg" fetchpriority="low" loading="lazy" />
         <p style="text-align: center; translate: 0 -25px">- tobycm</p>
       </div>
-      <img src="IMG_3405.webp" fetchpriority="low" loading="lazy" />
+      <img
+        src="IMG_3405.webp"
+        srcset="
+          IMG_3405.webp       2049w,
+          IMG_3405/x2048.webp 2048w,
+          IMG_3405/x2048.png  2048w,
+          IMG_3405/x1536.webp 1536w,
+          IMG_3405/x1536.png  1536w,
+          IMG_3405/x1024.webp 1024w,
+          IMG_3405/x1024.png  1024w,
+          IMG_3405/x768.webp   768w,
+          IMG_3405/x768.png    768w,
+          IMG_3405/x512.webp   512w,
+          IMG_3405/x512.png    512w,
+          IMG_3405/x384.webp   384w,
+          IMG_3405/x384.png    384w,
+          IMG_3405/x256.webp   256w,
+          IMG_3405/x256.png    256w,
+          IMG_3405/x192.webp   192w,
+          IMG_3405/x192.png    192w
+        "
+        fetchpriority="low"
+        loading="lazy" />
     </div>
 
     <footer>
