spaces are unfriendly :3

--- a/robotics/index.html
+++ b/robotics/index.html
@@ -26,8 +26,26 @@
 
     <div id="opening">
       <img
-        src="20250302_175402998_iOS 1 square.webp"
-        srcset="20250302_175402998_iOS 1 square.webp 2049w, 20250302_175402998_iOS 1 square/x2048.webp 2048w, 20250302_175402998_iOS 1 square/x2048.png 2048w, 20250302_175402998_iOS 1 square/x1536.webp 1536w, 20250302_175402998_iOS 1 square/x1536.png 1536w, 20250302_175402998_iOS 1 square/x1024.webp 1024w, 20250302_175402998_iOS 1 square/x1024.png 1024w, 20250302_175402998_iOS 1 square/x768.webp 768w, 20250302_175402998_iOS 1 square/x768.png 768w, 20250302_175402998_iOS 1 square/x512.webp 512w, 20250302_175402998_iOS 1 square/x512.png 512w, 20250302_175402998_iOS 1 square/x384.webp 384w, 20250302_175402998_iOS 1 square/x384.png 384w, 20250302_175402998_iOS 1 square/x256.webp 256w, 20250302_175402998_iOS 1 square/x256.png 256w, 20250302_175402998_iOS 1 square/x192.webp 192w, 20250302_175402998_iOS 1 square/x192.png 192w"
+        src="happi.webp"
+        srcset="
+          happi.webp       2049w,
+          happi/x2048.webp 2048w,
+          happi/x2048.png  2048w,
+          happi/x1536.webp 1536w,
+          happi/x1536.png  1536w,
+          happi/x1024.webp 1024w,
+          happi/x1024.png  1024w,
+          happi/x768.webp   768w,
+          happi/x768.png    768w,
+          happi/x512.webp   512w,
+          happi/x512.png    512w,
+          happi/x384.webp   384w,
+          happi/x384.png    384w,
+          happi/x256.webp   256w,
+          happi/x256.png    256w,
+          happi/x192.webp   192w,
+          happi/x192.png    192w
+        "
         style="transform-origin: top left; margin-left: 0"
         fetchpriority="high" />
 
