small fixes + better content shift

--- a/robotics/index.html
+++ b/robotics/index.html
@@ -46,7 +46,7 @@
           happi/x192.webp   192w,
           happi/x192.png    192w
         "
-        style="transform-origin: top left; margin-left: 0"
+        style="transform-origin: top left; margin-left: 0; aspect-ratio: 3701 / 3456"
         fetchpriority="high" />
 
       <img
@@ -70,6 +70,7 @@
           _MG_9181/x192.webp   192w,
           _MG_9181/x192.png    192w
         "
+        style="aspect-ratio: 2 / 3"
         fetchpriority="low" />
 
       <img
@@ -93,6 +94,7 @@
           _MG_9190/x192.webp   192w,
           _MG_9190/x192.png    192w
         "
+        style="aspect-ratio: 2 / 3"
         fetchpriority="low" />
 
       <img
@@ -112,6 +114,7 @@
           xd/x192.webp   192w,
           xd/x192.png    192w
         "
+        style="aspect-ratio: 4 / 5"
         fetchpriority="low" />
     </div>
 
