--- a/robotics/index.html
+++ b/robotics/index.html
@@ -5,6 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>The robotics side of tobycm</title>
 
+    <link rel="shortcut icon" href="/logo.svg" type="image/svg" />
+
+    <meta name="description" content="a sneak peak into tobycm's robotics life" />
+
+    <!-- Open Graph meta tags -->
+    <meta property="og:title" content="Toby Cm's Robotics Life" />
+    <meta property="og:description" content="a sneak peak into tobycm's robotics life" />
+    <meta property="og:image" content="/robotics/happi.webp" />
+    <meta property="og:url" content="https://tobycm.dev/robotics" />
+    <meta property="og:site_name" content="Toby Cm's Personal Page" />
+
     <link rel="stylesheet" href="/root.css" />
     <link rel="stylesheet" href="/imgzoom.css" />
 
@@ -14,13 +25,13 @@
     <link rel="stylesheet" href="index.css" />
   </head>
   <body>
-    <script src="/theme.js"></script>
-
     <a href="/index.html" class="home exclude">&lt;- back to home page</a>
 
     <div style="float: right">
       <button onclick="setTheme()" id="themeButton">🔆</button>
     </div>
+
+    <script src="/theme.js"></script>
 
     <br />
 
@@ -46,6 +57,7 @@
           happi/x192.webp   192w,
           happi/x192.png    192w
         "
+        alt="toby photo op"
         style="transform-origin: top left; margin-left: 0; aspect-ratio: 3701 / 3456"
         fetchpriority="high" />
 
@@ -70,6 +82,7 @@
           _MG_9181/x192.webp   192w,
           _MG_9181/x192.png    192w
         "
+        alt="toby and mentor"
         style="aspect-ratio: 2 / 3"
         fetchpriority="low" />
 
@@ -94,6 +107,7 @@
           _MG_9190/x192.webp   192w,
           _MG_9190/x192.png    192w
         "
+        alt="<3"
         style="aspect-ratio: 2 / 3"
         fetchpriority="low" />
 
@@ -114,6 +128,7 @@
           xd/x192.webp   192w,
           xd/x192.png    192w
         "
+        alt="toby and team lead"
         style="aspect-ratio: 4 / 5"
         fetchpriority="low" />
     </div>
@@ -122,7 +137,7 @@
       <h1>Penticton Robotics - FRC Team #8339</h1>
     </a>
 
-    <h3>Lead Robot Programming | Graphics Designer | Lead Website Developer | Electrician</h3>
+    <h2 style="font-size: 1.25rem">Lead Robot Programming | Graphics Designer | Lead Website Developer | Electrician</h2>
 
     <p><i>2 years and counting...</i></p>
 
@@ -166,7 +181,7 @@
 
     <div id="xd">
       <div>
-        <img src="/signature.svg" fetchpriority="low" loading="lazy" />
+        <img src="/signature.svg" alt="toby signature" fetchpriority="low" loading="lazy" />
         <p style="text-align: center; translate: 0 -25px">- tobycm</p>
       </div>
       <img
@@ -190,6 +205,7 @@
           IMG_3405/x192.webp   192w,
           IMG_3405/x192.png    192w
         "
+        alt="<3"
         fetchpriority="low"
         loading="lazy" />
     </div>
