--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
 
     <link rel="stylesheet" href="index.css" />
 
+    <link rel="stylesheet" href="/bounce.css" />
+    <link rel="stylesheet" href="/apple_cat.css" />
+
     <title>Toby Cm</title>
   </head>
 
@@ -30,6 +33,8 @@
     <div style="float: right">
       <button onclick="setTheme()" id="themeButton">🔆</button>
     </div>
+
+    <img id="appleCat" src="/apple_cat.gif" alt="apple cat bouncing around :3" />
 
     <script src="/theme.js"></script>
 
